fix blurry

--- a/2018/dialog.scss
+++ b/2018/dialog.scss
@@ -14,7 +14,7 @@ dialog {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate3d(-50%, -50%, 0);
 
   @media screen and (max-width: 600px) {
     padding: 1.5em 1em;
